--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^4.5.0"
+  },
+  "engines": {
+    "node": "14.15.5"
   }
 }
